Partial support for multiple trust roots in Dorian, still need to support CRLs.

--- a/cagrid-dorian/cagrid-dorian-service/src/test/resources/META-INF/spring/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-service/src/test/resources/META-INF/spring/dorian.properties
@@ -33,11 +33,12 @@ cagrid.dorian.service.federation.user.certificate.lifetime.seconds=0
 cagrid.dorian.service.federation.user.search.policy=Admin
 cagrid.dorian.service.federation.host.search.policy=Admin
 cagrid.dorian.service.federation.crl.publish=
+cagrid.dorian.service.ca.db.alias=dorianca
 cagrid.dorian.service.ca.password=admin
 cagrid.dorian.service.ca.policy.oid=
 cagrid.dorian.service.ca.issued.cert.key.size=1024
 cagrid.dorian.service.ca.auto.create=true
-cagrid.dorian.service.ca.auto.create.subject=C=US,O=abc,OU=xyz,OU=caGrid,CN=caGrid Dorian CA
+cagrid.dorian.service.ca.auto.create.subject=O=caBIG,OU=caGrid,OU=Training,CN=caGrid Training CA 2
 cagrid.dorian.service.ca.auto.create.key.size=2048
 cagrid.dorian.service.ca.auto.create.lifetime.years=10
 cagrid.dorian.service.ca.auto.create.lifetime.months=0
@@ -52,5 +53,25 @@ cagrid.dorian.service.ca.auto.renew.lifetime.days=0
 cagrid.dorian.service.ca.auto.renew.lifetime.hours=0
 cagrid.dorian.service.ca.auto.renew.lifetime.minutes=0
 cagrid.dorian.service.ca.auto.renew.lifetime.seconds=0
+cagrid.dorian.service.legacy-ca.db.alias=legacyca
+cagrid.dorian.service.legacy-ca.password=admin
+cagrid.dorian.service.legacy-ca.policy.oid=
+cagrid.dorian.service.legacy-ca.issued.cert.key.size=1024
+cagrid.dorian.service.legacy-ca.auto.create=true
+cagrid.dorian.service.legacy-ca.auto.create.subject=O=caBIG,OU=caGrid,OU=Training,CN=caGrid Training CA
+cagrid.dorian.service.legacy-ca.auto.create.key.size=2048
+cagrid.dorian.service.legacy-ca.auto.create.lifetime.years=10
+cagrid.dorian.service.legacy-ca.auto.create.lifetime.months=0
+cagrid.dorian.service.legacy-ca.auto.create.lifetime.days=0
+cagrid.dorian.service.legacy-ca.auto.create.lifetime.hours=0
+cagrid.dorian.service.legacy-ca.auto.create.lifetime.minutes=0
+cagrid.dorian.service.legacy-ca.auto.create.lifetime.seconds=0
+cagrid.dorian.service.legacy-ca.auto.renew=false
+cagrid.dorian.service.legacy-ca.auto.renew.lifetime.years=10
+cagrid.dorian.service.legacy-ca.auto.renew.lifetime.months=0
+cagrid.dorian.service.legacy-ca.auto.renew.lifetime.days=0
+cagrid.dorian.service.legacy-ca.auto.renew.lifetime.hours=0
+cagrid.dorian.service.legacy-ca.auto.renew.lifetime.minutes=0
+cagrid.dorian.service.legacy-ca.auto.renew.lifetime.seconds=0
 cagrid.dorian.service.metadata.url=serviceMetadata.xml
 cagrid.dorian.service.security.metadata.url=serviceSecurityMetadata.xml
