--- a/cagrid-dorian/cagrid-dorian-service-tools/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service-tools/pom.xml
@@ -84,6 +84,12 @@
 			<artifactId>spring-test</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
