--- a/cagrid-gme/pom.xml
+++ b/cagrid-gme/pom.xml
@@ -117,5 +117,6 @@
     <modules>
         <module>cagrid-gme-api</module>
         <module>cagrid-gme-service</module>
+        <module>cagrid-gme-wsrf</module>
     </modules>
 </project>
