--- a/cagrid-features/pom.xml
+++ b/cagrid-features/pom.xml
@@ -165,6 +165,11 @@
             <artifactId>cagrid-gme-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gme-wsrf</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Third Party Deps -->
         <dependency>
