gme wsrf client

--- a/cagrid-gme/pom.xml
+++ b/cagrid-gme/pom.xml
@@ -118,5 +118,6 @@
         <module>cagrid-gme-api</module>
         <module>cagrid-gme-service</module>
         <module>cagrid-gme-wsrf</module>
+        <module>cagrid-gme-soap-client</module>
     </modules>
 </project>
