--- a/cagrid-gts/cagrid-gts-service/pom.xml
+++ b/cagrid-gts/cagrid-gts-service/pom.xml
@@ -1,167 +1,193 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.cagrid</groupId>
-		<artifactId>cagrid-gts</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
-	</parent>
-	<artifactId>cagrid-gts-service</artifactId>
-	<packaging>bundle</packaging>
-	<name>caGrid GTS Service</name>
-	<properties>
-		<db.name>GTS_TEST</db.name>
-	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>sql-maven-plugin</artifactId>
-				<version>1.5</version>
-				<configuration>
-					<driver>com.mysql.jdbc.Driver</driver>
-					<url>jdbc:mysql://localhost:3306</url>
-					<username>root</username>
-					<password/>
-					<skip>${skipTests}</skip>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>com.mysql.jdbc</groupId>
-						<artifactId>com.springsource.com.mysql.jdbc</artifactId>
-						<version>5.1.6</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>drop-db-before-test</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<sqlCommand>drop database if exists ${db.name}</sqlCommand>
-						</configuration>
-					</execution>
-					<execution>
-						<id>create-db</id>
-						<phase>process-test-resources</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<sqlCommand>create database ${db.name}</sqlCommand>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Embed-Dependency> mobius_tools| mobius_common_client</Embed-Dependency>
-						<Export-Package></Export-Package>
-						<Import-Package>
-						EDU.oswego.cs.dl.util.concurrent;resolution:=optional,
-						org.projectmobius*;resolution:=optional,
-						!org.projectmobius.castor*,
-						!javax.swing*, 
-						*</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gts-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-				<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gts-soap-client</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-gaards-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-metadata-model</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>cagrid-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>ws-model</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>wsrf-faults-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>${wsrf.group}</groupId>
-			<artifactId>wsrf-properties-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.mysql.jdbc</groupId>
-			<artifactId>com.springsource.com.mysql.jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectmobius</groupId>
-			<artifactId>mobius_tools</artifactId>
-			<version>1.1</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/mobius_tools-1.1.jar</systemPath>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.projectmobius</groupId>
-			<artifactId>mobius_common_client</artifactId>
-			<version>1.1</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/mobius_common_client-1.1.jar</systemPath>
-			<optional>true</optional>
-		</dependency>
-	</dependencies>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.cagrid</groupId>
+        <artifactId>cagrid-gts</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>cagrid-gts-service</artifactId>
+    <packaging>bundle</packaging>
+    <name>caGrid GTS Service</name>
+    <properties>
+        <db.name>GTS_TEST</db.name>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sql-maven-plugin</artifactId>
+                <version>1.5</version>
+                <configuration>
+                    <driver>com.mysql.jdbc.Driver</driver>
+                    <url>jdbc:mysql://localhost:3306</url>
+                    <username>root</username>
+                    <password/>
+                    <skip>${skipTests}</skip>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mysql.jdbc</groupId>
+                        <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+                        <version>5.1.6</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>drop-db-before-test</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <sqlCommand>drop database if exists ${db.name}</sqlCommand>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-db</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <sqlCommand>create database ${db.name}</sqlCommand>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Embed-Dependency>mobius_tools|mobius_common_client</Embed-Dependency>
+                        <Export-Package></Export-Package>
+                        <DynamicImport-Package>com.mysql.jdbc</DynamicImport-Package>
+                        <Import-Package>
+                            EDU.oswego.cs.dl.util.concurrent;resolution:=optional,
+                            org.projectmobius.common,
+                            org.projectmobius*;resolution:=optional,
+                            !org.projectmobius.castor*,
+                            !sun.security.action*,
+                            !javax.swing*,
+                            *</Import-Package>
+                            
+                    </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>src/main/resources/gts-conf.xml</file>
+                                    <type>xml</type>
+                                    <classifier>gts-config</classifier>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gts-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gts-soap-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-gaards-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-metadata-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cagrid-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>ws-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>wsrf-faults-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${wsrf.group}</groupId>
+            <artifactId>wsrf-properties-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql.jdbc</groupId>
+            <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectmobius</groupId>
+            <artifactId>mobius_tools</artifactId>
+            <version>1.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/mobius_tools-1.1.jar</systemPath>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.projectmobius</groupId>
+            <artifactId>mobius_common_client</artifactId>
+            <version>1.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/mobius_common_client-1.1.jar</systemPath>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 </project>
