--- a/cagrid-gme/pom.xml
+++ b/cagrid-gme/pom.xml
@@ -54,6 +54,20 @@
                 <version>3.0</version>
                 <scope>test</scope>
             </dependency>
+			<dependency>
+                                <groupId>org.cagrid.wsrf</groupId>
+                                <artifactId>wsrf-draft-features</artifactId>
+                                <version>${wsrf.version}</version>
+                                <classifier>features</classifier>
+                                <type>xml</type>
+                        </dependency>
+                        <dependency>
+                                <groupId>org.cagrid</groupId>
+                                <artifactId>cagrid-features</artifactId>
+                                <version>${project.version}</version>
+                                <classifier>features</classifier>
+                                <type>xml</type>
+                        </dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -119,5 +133,6 @@
         <module>cagrid-gme-service</module>
         <module>cagrid-gme-wsrf</module>
         <module>cagrid-gme-soap-client</module>
+	    <module>cagrid-gme-systest</module>
     </modules>
 </project>
