add gme legacy port

--- a/cagrid-gme/cagrid-gme-systest/src/test/resources/cagrid.gme.wsrf.cfg
+++ b/cagrid-gme/cagrid-gme-systest/src/test/resources/cagrid.gme.wsrf.cfg
@@ -2,3 +2,8 @@ cagrid.gme.wsrf.keystore.password=inventrio
 cagrid.gme.wsrf.keystore.alias=tomcat
 cagrid.gme.wsrf.key.password=inventrio
 cagrid.gme.wsrf.truststore.password=inventrio
+
+cagrid.gme.legacy-wsrf.keystore.password=inventrio
+cagrid.gme.legacy-wsrf.keystore.alias=tomcat
+cagrid.gme.legacy-wsrf.key.password=inventrio
+cagrid.gme.legacy-wsrf.truststore.password=inventrio
