--- a/cagrid-gridgrouper/cagrid-gridgrouper-systest/src/test/resources/cagrid.gridgrouper.wsrf.cfg
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-systest/src/test/resources/cagrid.gridgrouper.wsrf.cfg
@@ -1,4 +1,4 @@
-cagrid.gme.wsrf.keystore.password=inventrio
-cagrid.gme.wsrf.keystore.alias=tomcat
-cagrid.gme.wsrf.key.password=inventrio
-cagrid.gme.wsrf.truststore.password=inventrio
+cagrid.gridgrouper.wsrf.keystore.password=inventrio
+cagrid.gridgrouper.wsrf.keystore.alias=tomcat
+cagrid.gridgrouper.wsrf.key.password=inventrio
+cagrid.gridgrouper.wsrf.truststore.password=inventrio
