add legacy port to grouper

--- a/cagrid-gridgrouper/cagrid-gridgrouper-systest/src/test/resources/cagrid.gridgrouper.wsrf.cfg
+++ b/cagrid-gridgrouper/cagrid-gridgrouper-systest/src/test/resources/cagrid.gridgrouper.wsrf.cfg
@@ -2,3 +2,7 @@ cagrid.gridgrouper.wsrf.keystore.password=inventrio
 cagrid.gridgrouper.wsrf.keystore.alias=tomcat
 cagrid.gridgrouper.wsrf.key.password=inventrio
 cagrid.gridgrouper.wsrf.truststore.password=inventrio
+cagrid.gridgrouper.legacy-wsrf.keystore.password=inventrio
+cagrid.gridgrouper.legacy-wsrf.keystore.alias=tomcat
+cagrid.gridgrouper.legacy-wsrf.key.password=inventrio
+cagrid.gridgrouper.legacy-wsrf.truststore.password=inventrio
