--- a/cagrid-gts/cagrid-gts-tests/pom.xml
+++ b/cagrid-gts/cagrid-gts-tests/pom.xml
@@ -8,6 +8,11 @@
     </parent>
     <artifactId>cagrid-gts-tests</artifactId>
     <name>caGrid GTS Tests</name>
+    
+    <properties>
+        <db.name>cagrid_gts</db.name>
+    </properties>
+    
     <build>
         <plugins>
             <!-- generate dependencies versions -->
@@ -29,6 +34,47 @@
                         <profiles>log,url</profiles>
                     </settings>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sql-maven-plugin</artifactId>
+                <version>1.5</version>
+                <configuration>
+                    <driver>com.mysql.jdbc.Driver</driver>
+                    <url>jdbc:mysql://localhost:3306</url>
+                    <username>root</username>
+                    <password />
+                    <skip>${skipTests}</skip>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mysql.jdbc</groupId>
+                        <artifactId>com.springsource.com.mysql.jdbc</artifactId>
+                        <version>5.1.6</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>drop-db-before-test</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <sqlCommand>drop database if exists ${db.name}</sqlCommand>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-db</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <sqlCommand>create database ${db.name}</sqlCommand>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
