Misc. cleanup and start checking in bits of dorian systest.

--- a/cagrid-dorian/pom.xml
+++ b/cagrid-dorian/pom.xml
@@ -68,5 +68,6 @@
 		<module>cagrid-dorian-wsrf</module>
 		<module>cagrid-dorian-soap-client</module>
 		<module>cagrid-dorian-service-tools</module>
+		<module>cagrid-dorian-systest</module>
 	</modules>
 </project>
