Remove systest project from build!

--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,6 @@
 		<module>cagrid-gridgrouper</module>
         <module>cagrid-gme</module>
 		<!-- TODO: MOVE THIS <module>puretls</module> -->
-		<module>cagrid-systest</module>
+		<!-- <module>cagrid-systest</module> -->
 	</modules>
 </project>
