Change dbcp scope to provided due to conflicts in dorian systest.

--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,7 @@
 				<groupId>commons-dbcp</groupId>
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.4</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.santuario</groupId>
