--- a/cagrid-dorian/cagrid-dorian-systest/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-systest/pom.xml
@@ -133,7 +133,6 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.15</version>
 						<executions>
 							<execution>
 								<goals>
@@ -164,8 +163,13 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-dorian-service</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>${project.groupId}</groupId> <artifactId>cagrid-features</artifactId> 
-			<version>${project.version}</version> </dependency> -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-features</artifactId>
+			<classifier>features</classifier>
+			<type>xml</type>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
