--- a/cagrid-dorian/cagrid-dorian-service/src/test/resources/META-INF/spring/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-service/src/test/resources/META-INF/spring/dorian.properties
@@ -3,6 +3,12 @@ cagrid.dorian.service.db.host=localhost
 cagrid.dorian.service.db.port=3306
 cagrid.dorian.service.db.user=root
 cagrid.dorian.service.db.password=
+cagrid.dorian.service.client.keystore.file=dorian-host.jks
+cagrid.dorian.service.client.keystore.password=changeit
+cagrid.dorian.service.client.key.alias=host
+cagrid.dorian.service.client.key.password=changeit
+cagrid.dorian.service.client.truststore.file=truststore.jks
+cagrid.dorian.service.client.truststore.password=changeit
 cagrid.dorian.service.idp.name=Dorian
 cagrid.dorian.service.idp.renew.asserting.credentials=true
 cagrid.dorian.service.idp.asserting.credentials.password=idpkey
