--- a/cagrid-dorian/cagrid-dorian-service/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-service/pom.xml
@@ -86,6 +86,17 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-dorian-api</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-gts-soap-client</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-gts-api</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-gaards-api</artifactId>
