Use base test in dorian systest.

--- a/cagrid-dorian/cagrid-dorian-systest/pom.xml
+++ b/cagrid-dorian/cagrid-dorian-systest/pom.xml
@@ -135,8 +135,12 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>cagrid-systest</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cagrid-dorian-api</artifactId>
