Clean up some dorian properties.

--- a/cagrid-dorian/cagrid-dorian-systest/src/pax/META-INF/spring/dorian.properties
+++ b/cagrid-dorian/cagrid-dorian-systest/src/pax/META-INF/spring/dorian.properties
@@ -38,7 +38,7 @@ cagrid.dorian.service.ca.password=admin
 cagrid.dorian.service.ca.policy.oid=
 cagrid.dorian.service.ca.issued.cert.key.size=1024
 cagrid.dorian.service.ca.auto.create=true
-cagrid.dorian.service.ca.auto.create.subject=${subject.id}
+cagrid.dorian.service.ca.auto.create.subject=C=US,O=abc,OU=xyz,OU=caGrid,CN=caGrid Dorian CA
 cagrid.dorian.service.ca.auto.create.key.size=2048
 cagrid.dorian.service.ca.auto.create.lifetime.years=10
 cagrid.dorian.service.ca.auto.create.lifetime.months=0
@@ -58,7 +58,7 @@ cagrid.dorian.service.legacy-ca.password=admin
 cagrid.dorian.service.legacy-ca.policy.oid=
 cagrid.dorian.service.legacy-ca.issued.cert.key.size=1024
 cagrid.dorian.service.legacy-ca.auto.create=true
-cagrid.dorian.service.legacy-ca.auto.create.subject=O=caBIG,OU=caGrid,OU=Training,CN=caGrid Training CA
+cagrid.dorian.service.legacy-ca.auto.create.subject=C=US,O=abc,OU=xyz,OU=caGrid,CN=caGrid Dorian Legacy CA
 cagrid.dorian.service.legacy-ca.auto.create.key.size=2048
 cagrid.dorian.service.legacy-ca.auto.create.lifetime.years=10
 cagrid.dorian.service.legacy-ca.auto.create.lifetime.months=0
