--- a/cagrid-gridgrouper/pom.xml
+++ b/cagrid-gridgrouper/pom.xml
@@ -12,35 +12,45 @@
 
 	<dependencyManagement>
 		<dependencies>
-	                        <dependency>
-                                <groupId>org.cagrid.wsrf</groupId>
-                                <artifactId>wsrf-draft-features</artifactId>
-                                <version>${wsrf.version}</version>
-                                <classifier>features</classifier>
-                                <type>xml</type>
-                        </dependency>
-                        <dependency>
-                                <groupId>org.cagrid</groupId>
-                                <artifactId>cagrid-features</artifactId>
-                                <version>${project.version}</version>
-                                <classifier>features</classifier>
-                                <type>xml</type>
-                        </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>cagrid-gridgrouper-api</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>cagrid-gridgrouper-internet2</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>cagrid-gridgrouper-service</artifactId>
-                <version>${project.version}</version>
-            </dependency>
+			<dependency>
+				<groupId>org.cagrid.wsrf</groupId>
+				<artifactId>wsrf-draft-features</artifactId>
+				<version>${wsrf.version}</version>
+				<classifier>features</classifier>
+				<type>xml</type>
+			</dependency>
+			<dependency>
+				<groupId>org.cagrid</groupId>
+				<artifactId>cagrid-features</artifactId>
+				<version>${project.version}</version>
+				<classifier>features</classifier>
+				<type>xml</type>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-gridgrouper-api</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-gridgrouper-internet2</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-gridgrouper-service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-gridgrouper-wsrf</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>cagrid-gridgrouper-soap-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-gaards-api</artifactId>
@@ -51,7 +61,7 @@
 				<artifactId>cagrid-metadata-model</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>cagrid-core</artifactId>
@@ -77,10 +87,11 @@
 
 	<modules>
 		<module>cagrid-gridgrouper-api</module>
-        	<module>cagrid-gridgrouper-internet2</module>
+		<module>cagrid-gridgrouper-internet2</module>
 		<module>cagrid-gridgrouper-service</module>
- 		<module>cagrid-gridgrouper-wsrf</module>
+		<module>cagrid-gridgrouper-wsrf</module>
 		<module>cagrid-gridgrouper-soap-client</module>
-		<module>cagrid-gridgrouper-systest</module>		
+		<module>cagrid-gridgrouper-systest</module>
+		<module>cagrid-gridgrouper-inttest</module>
 	</modules>
 </project>
